# meson-gtest

./: .gitignore  README.md  fmt  meson.build  sfmt
src/: fibonacci.cpp
tests/: test_fib.cpp
